--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                             </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.github.edurbs.adapter.Main</mainClass>
+                                    <mainClass>com.github.edurbs.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
