--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,11 @@
         </dependency>
         
         <!-- WebDriverManager -->
-        <dependency>
+        <!-- <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>${webdrivermanager.version}</version>
-        </dependency>
+        </dependency> -->
 
         <!-- Lombok -->
         <dependency>
