--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <webdrivermanager.version>5.7.0</webdrivermanager.version>
         <lombok.version>1.18.28</lombok.version>
         <logback.version>1.5.18</logback.version>
+        <jsoup.version>1.20.1</jsoup.version>
     </properties>
 
     <dependencies>
@@ -40,6 +41,13 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
         </dependency>
     </dependencies>
 
