--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,11 +7,7 @@
       "label": "Run coverage",
       "type": "shell",
       "command": "mvn clean jacoco:prepare-agent install jacoco:report",
-      "group": "test",
-      "presentation": {
-        "reveal": "always",
-        "panel": "new"
-      }
+      "group": "test"
     }
   ]
 }
