--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "java.debug.settings.onBuildFailureProceed": true,
     "cSpell.words": [
         "Archiver"
-    ]
+    ],
+    "java.dependency.packagePresentation": "hierarchical"
 }
